注释读书、消费金、小镇、道早安